[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/GUI/GameTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/Cabin/Cabin-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GUI/PauseMenu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
margin_left = 223.0
margin_top = 159.0
margin_right = 417.0
margin_bottom = 321.0
custom_constants/separation = 6

[node name="Label" type="Label" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_right = 194.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1

[node name="ContinueButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 37.0
margin_top = 84.0
margin_right = 157.0
margin_bottom = 120.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 4
text = "Continue"

[node name="QuitButton" type="Button" parent="ColorRect/CenterContainer/VBoxContainer"]
margin_left = 37.0
margin_top = 126.0
margin_right = 157.0
margin_bottom = 162.0
rect_min_size = Vector2( 120, 0 )
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ColorRect/CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
